add endpoints for balance
