# src/Web/wwwroot/swagger/v1/swagger.yaml
@@ -3,6 +3,36 @@ info:
   title: 'BevMan.Web, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null'
   version: '1.0'
 paths:
+  /api/Balance:
+    get:
+      tags:
+        - Balance
+      operationId: GetBalance
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BalanceDto'
+    put:
+      tags:
+        - Balance
+      operationId: UpdateBalance
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateBalanceCommand'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int64
   /api/Product:
     get:
       tags:
@@ -34,7 +64,7 @@ paths:
             application/json:
               schema:
                 type: integer
-                format: int32
+                format: int64
   '/api/Product/{id}':
     get:
       tags:
@@ -47,7 +77,7 @@ paths:
           style: simple
           schema:
             type: integer
-            format: int32
+            format: int64
       responses:
         '200':
           description: OK
@@ -66,7 +96,7 @@ paths:
           style: simple
           schema:
             type: integer
-            format: int32
+            format: int64
       requestBody:
         content:
           application/json:
@@ -87,12 +117,19 @@ paths:
           style: simple
           schema:
             type: integer
-            format: int32
+            format: int64
       responses:
         '200':
           description: OK
 components:
   schemas:
+    BalanceDto:
+      type: object
+      properties:
+        amount:
+          type: number
+          format: double
+      additionalProperties: false
     CreateProductCommand:
       required:
         - name
@@ -115,10 +152,14 @@ components:
       additionalProperties: false
     ProductDto:
       required:
+        - id
         - name
         - price
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
         name:
           type: string
         price:
@@ -127,6 +168,16 @@ components:
         description:
           type: string
           nullable: true
+      additionalProperties: false
+    UpdateBalanceCommand:
+      required:
+        - amount
+      type: object
+      properties:
+        amount:
+          minimum: 0
+          type: number
+          format: double
       additionalProperties: false
     UpdateProductCommand:
       required:
@@ -137,7 +188,7 @@ components:
       properties:
         id:
           type: integer
-          format: int32
+          format: int64
         name:
           maxLength: 100
           minLength: 1
